# tmpmail

./: .gitignore  README.md  pyproject.toml
src/tmpmail/: __init__.py  __main__.py  cli.py
tests/: test_tmpmail.py
